"Replace `record` with a mutable `class` for `SolrConfigurationProperties`, update property accessors in `SolrConfig`, and support environment variable substitution in configuration. Add `films.json` data for Solr initialization."